Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -3190,7 +3190,7 @@ msgstr "Vietoj <code>INSERT</code> sakinio naudoti:"
 
 #: libraries/export/sql.php:138
 msgid "<code>INSERT DELAYED</code> statements"
-msgstr ""
+msgstr "<code>INSERT DELAYED</code> sakinys"
 
 #: libraries/export/sql.php:140
 msgid "<code>INSERT IGNORE</code> statements"
