--- a/po/lt.po
+++ b/po/lt.po
@@ -3229,6 +3229,8 @@ msgid ""
 "both of the above<br /> &nbsp; &nbsp; &nbsp; Example: <code>INSERT INTO "
 "tbl_name (col_A,col_B) VALUES (1,2,3), (4,5,6), (7,8,9)</code>"
 msgstr ""
+"abu iš paminėtų<br /> &nbsp; &nbsp; &nbsp; Pavyzdys: <code>INSERT INTO "
+"lenteles_vardas (col_A,col_B) VALUES (1,2,3), (4,5,6), (7,8,9)</code>"
 
 #: libraries/export/sql.php:157
 msgid ""
