--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 17:58+0200\n"
+"PO-Revision-Date: 2010-08-20 18:01+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -3237,6 +3237,8 @@ msgid ""
 "neither of the above<br /> &nbsp; &nbsp; &nbsp; Example: <code>INSERT INTO "
 "tbl_name VALUES (1,2,3)</code>"
 msgstr ""
+"nė vienas iš paminėtų<br /> &nbsp; &nbsp; &nbsp; Pavyzdys: <code>INSERT INTO "
+"lenteles_vardas VALUES (1,2,3)</code>"
 
 #: libraries/export/sql.php:163
 msgid "Maximal length of created query"
