--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 18:17+0200\n"
+"PO-Revision-Date: 2010-08-20 18:18+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -876,7 +876,7 @@ msgstr "Nuoroda ištrinta."
 
 #: import.php:399
 msgid "Showing bookmark"
-msgstr ""
+msgstr "Rodomos žymelės"
 
 #: import.php:401 sql.php:623
 #, php-format
