--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 18:21+0200\n"
+"PO-Revision-Date: 2010-08-20 18:24+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -901,6 +901,9 @@ msgid ""
 "However on last run no data has been parsed, this usually means phpMyAdmin "
 "won't be able to finish this import unless you increase php time limits."
 msgstr ""
+"Deja per paskutinį paleidimą jokie nauji duomenys nebuvo nagrinėti, tai "
+"dažniausiai reiškia, kad phpMyAdmin negali baigti importuoti nebent Jūs "
+"padidintumėte PHP laiko limitą."
 
 #: import_status.php:30 libraries/common.lib.php:662 pdf_schema.php:239
 #: user_password.php:110
