--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 18:27+0200\n"
+"PO-Revision-Date: 2010-08-20 18:28+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -96,7 +96,7 @@ msgstr "Joks blob srautinio duomenų siuntimo serveris nesukonfigūruotas!"
 
 #: bs_disp_as_mime_type.php:35
 msgid "Failed to fetch headers"
-msgstr ""
+msgstr "Nepavyko gauti/priimti antraščių"
 
 #: bs_disp_as_mime_type.php:41
 msgid "Failed to open remote URL"
