--- a/po/lt.po
+++ b/po/lt.po
@@ -547,10 +547,9 @@ msgid "Inside table(s):"
 msgstr "Lentelės(ių) viduje:"
 
 #: db_search.php:337
-#, fuzzy
 #| msgid "Inside table(s):"
 msgid "Inside column:"
-msgstr "Lentelės(ių) viduje:"
+msgstr "Stulpelio viduje:"
 
 #: db_structure.php:79 db_structure.php:80 db_structure.php:92
 #: db_structure.php:93 db_structure.php:105 db_structure.php:106
