--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 18:36+0200\n"
+"PO-Revision-Date: 2010-08-20 18:41+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2637,7 +2637,7 @@ msgstr ""
 
 #: libraries/engines/innodb.lib.php:260
 msgid "Write waits in %"
-msgstr ""
+msgstr "Rašymas laukia %"
 
 #: libraries/engines/myisam.lib.php:22
 msgid "Data pointer size"
