--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 18:42+0200\n"
+"PO-Revision-Date: 2010-08-20 18:44+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2648,6 +2648,8 @@ msgid ""
 "The default pointer size in bytes, to be used by CREATE TABLE for MyISAM "
 "tables when no MAX_ROWS option is specified."
 msgstr ""
+"Numatytasis rodyklės dydis baitais naudojamas CREATE TABLE teiginio MyISAM "
+"lentelėms kai nenustatytas MAX_ROWS nustatymas."
 
 #: libraries/engines/myisam.lib.php:27
 msgid "Automatic recovery mode"
