--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 18:47+0200\n"
+"PO-Revision-Date: 2010-08-20 18:50+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -3454,6 +3454,8 @@ msgid ""
 "Invalid column (%s) specified! Ensure that columns names are spelled "
 "correctly, separated by commas, and not enclosed in quotes."
 msgstr ""
+"Blogai nurodyti stulpeliai (%s)! Įsitikinkite, kad stulpelių vardai parašyti "
+"gerai, atskirti kableliais ir apskliausti (apimti, aptverti) kabutėmis."
 
 #: libraries/import/csv.php:179 libraries/import/csv.php:426
 #, php-format
