Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 18:52+0200\n"
+"PO-Revision-Date: 2010-08-20 18:59+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4404,8 +4404,9 @@ msgid ""
 "prefix like \"http://www.example.com/\". The second option is a title for "
 "the link."
 msgstr ""
-"Gražinama nuoroda į įvedimo lauke įrašytą failo pavadinimą; argumentai: "
-"prefiksas (pvz \"http://domain.com/\"), nuorodos pavadinimas."
+"Gražinama nuoroda į įvedimo lauke įrašytą failo pavadinimą; Pirmas "
+"nustatymas nuorodos prefiksas (pvz \"http://domain.com/\"), o antras nuorodos "
+"pavadinimas."
 
 #: libraries/transformations/text_plain__longToIpv4.inc.php:9
 msgid ""
