--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:02+0200\n"
+"PO-Revision-Date: 2010-08-20 19:04+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4579,6 +4579,9 @@ msgid ""
 "functionality will be missing. For example navigation frame will not refresh "
 "automatically."
 msgstr ""
+"Javascript palaikymas nerastas arba yra išjungtas Jūsų naršyklėje, tad kai "
+"kurios phpMyAdmin funkcijos gali būti išnykę. Pavyzdžiui, navigacijos "
+"rėmelis automatiškai neatsinaujins."
 
 #: main.php:317
 #, php-format
