Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:04+0200\n"
+"PO-Revision-Date: 2010-08-20 19:08+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1025,10 +1025,9 @@ msgid "Please select the primary key or a unique key"
 msgstr "Prašome pasirinkti pirminį raktą arba unikalųjį raktą"
 
 #: js/messages.php:63 pmd_general.php:76 tbl_relation.php:545
-#, fuzzy
 #| msgid "Choose field to display"
 msgid "Choose column to display"
-msgstr "Pasirinkite lauką, kurį norite peržiūrėti"
+msgstr "Pasirinkite laukus peržiūrai"
 
 #: js/messages.php:66
 #| msgid "Generate Password"
