Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:08+0200\n"
+"PO-Revision-Date: 2010-08-20 19:10+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4784,6 +4784,9 @@ msgid ""
 "column, click the \"Choose column to display\" icon, then click on the "
 "appropriate column name."
 msgstr ""
+"Rodomi stulpeliai yra ryškiai rožinės spalvos. Pažymėti/atžymėti stulpelius "
+"rodymui, paspauskite „Pasirinkite laukus peržiūrai“ ikoną, tada paspauskite "
+"ant pasirinkto stulpelio vardo."
 
 #: pmd_pdf.php:60
 msgid "Page has been created"
