Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:10+0200\n"
+"PO-Revision-Date: 2010-08-20 19:13+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -5388,6 +5388,8 @@ msgstr "Nepavyko prisijungti prie pagrindinio (master) serverio %s."
 msgid ""
 "Unable to read master log position. Possible privilege problem on master."
 msgstr ""
+"Nepavyko perskaityti pagrindinio (master) serverio žurnalo (log). Galima "
+"privilegijų problema pagrindiniame serveryje."
 
 #: server_replication.php:69
 msgid "Unable to change master"
