--- a/po/lt.po
+++ b/po/lt.po
@@ -5393,7 +5393,7 @@ msgstr ""
 
 #: server_replication.php:69
 msgid "Unable to change master"
-msgstr ""
+msgstr "Nepavyko pakeisti pagrindinio (master) serverio"
 
 #: server_replication.php:72
 #, php-format
