--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:17+0200\n"
+"PO-Revision-Date: 2010-08-20 19:18+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -5422,9 +5422,8 @@ msgid ""
 msgstr ""
 
 #: server_replication.php:215
-#, fuzzy
 msgid "Master configuration"
-msgstr "Serverio nustatymai"
+msgstr "Pagrindinio serverio nustatymai"
 
 #: server_replication.php:216
 msgid ""
