--- a/po/lt.po
+++ b/po/lt.po
@@ -5436,7 +5436,7 @@ msgstr ""
 
 #: server_replication.php:219
 msgid "Replicate all databases; Ignore:"
-msgstr "Dauginti visas duombazes; Ignoruoti:"
+msgstr "Padauginti visas duombazes; Ignoruoti:"
 
 #: server_replication.php:220
 msgid "Ignore all databases; Replicate:"
