--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:24+0200\n"
+"PO-Revision-Date: 2010-08-20 19:26+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -5460,6 +5460,9 @@ msgid ""
 "should see a message informing you, that this server <b>is</b> configured as "
 "master"
 msgstr ""
+"Kai tik paleisite iš naujo MySQL serverį, prašome paspausi mygtuką Eiti. Po "
+"to, Jūs turite pamatyti informacinę žinutę, kad šis serveris <b>yra</b> "
+"sukonfigūruotas kaip pagrindinis (master)."
 
 #: server_replication.php:291
 msgid "Slave SQL Thread not running!"
