Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:27+0200\n"
+"PO-Revision-Date: 2010-08-20 19:28+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -5476,6 +5476,8 @@ msgstr "Pavaldžioji (slave) IO gija neveikia!"
 msgid ""
 "Server is configured as slave in a replication process. Would you like to:"
 msgstr ""
+"Serveris yra sukonfigūruotas kaip pavaldusis (slave) dauginimo (replication) "
+"procese. Ar norėtume:"
 
 #: server_replication.php:306
 msgid "See slave status table"
