--- a/po/lt.po
+++ b/po/lt.po
@@ -6301,9 +6301,8 @@ msgid "Structure Difference"
 msgstr "Struktūros skirtumas"
 
 #: server_synchronize.php:423 server_synchronize.php:866
-#, fuzzy
 msgid "Data Difference"
-msgstr "Skirtumas"
+msgstr "Duomenų skirtumas"
 
 #: server_synchronize.php:428 server_synchronize.php:871
 msgid "Add column(s)"
