Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:35+0200\n"
+"PO-Revision-Date: 2010-08-20 19:36+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6308,9 +6308,8 @@ msgid "Add column(s)"
 msgstr "Pridėti stulpelį(-ius)"
 
 #: server_synchronize.php:429 server_synchronize.php:872
-#, fuzzy
 msgid "Remove column(s)"
-msgstr "Pridėti stulpelį(-ius)"
+msgstr "Pašalinti stulpelį(-ius)"
 
 #: server_synchronize.php:430 server_synchronize.php:873
 msgid "Alter column(s)"
