--- a/po/lt.po
+++ b/po/lt.po
@@ -6325,7 +6325,7 @@ msgstr "Keisti žurnalą(us) (indeksą)"
 
 #: server_synchronize.php:433 server_synchronize.php:876
 msgid "Update row(s)"
-msgstr ""
+msgstr "Atnaujinti eilutę(es)"
 
 #: server_synchronize.php:434 server_synchronize.php:877
 msgid "Insert row(s)"
