--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:37+0200\n"
+"PO-Revision-Date: 2010-08-20 19:38+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6360,10 +6360,9 @@ msgid "Enter manually"
 msgstr "Įvesti rakiniu būdu"
 
 #: server_synchronize.php:1121
-#, fuzzy
 #| msgid "Insecure connection"
 msgid "Current connection"
-msgstr "Nesaugus susijungimas"
+msgstr "Dabartinis prisijungimas"
 
 #: server_synchronize.php:1150
 #, fuzzy, php-format
