--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:42+0200\n"
+"PO-Revision-Date: 2010-08-20 19:43+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6468,7 +6468,7 @@ msgstr "Paremti"
 
 #: setup/frames/index.inc.php:228 setup/lib/messages.inc.php:368
 msgid "Check for latest version"
-msgstr ""
+msgstr "Patikrinti ar naujausia versija"
 
 #: setup/frames/menu.inc.php:18 setup/lib/messages.inc.php:135
 msgid "Features"
