--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:44+0200\n"
+"PO-Revision-Date: 2010-08-20 19:45+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6501,7 +6501,7 @@ msgstr "Nustatyti reikšmę: %s"
 
 #: setup/lib/FormDisplay.tpl.php:187 setup/lib/messages.inc.php:232
 msgid "Restore default value"
-msgstr ""
+msgstr "Atstatyti numatytąsias reikšmes"
 
 #: setup/lib/form_processing.lib.php:43 setup/lib/messages.inc.php:375
 msgid "Warning"
