--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:45+0200\n"
+"PO-Revision-Date: 2010-08-20 19:46+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6528,7 +6528,7 @@ msgstr "Leisti jungtis prie bet kurio MySQL serverio"
 
 #: setup/lib/messages.inc.php:19
 msgid "Show &quot;Drop database&quot; link to normal users"
-msgstr ""
+msgstr "Rodyti „Pašalinti duombazę“ nuorodą paprastiems naudotojams"
 
 #: setup/lib/messages.inc.php:20
 msgid "Key should contain letters, numbers [em]and[/em] special characters"
