--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:46+0200\n"
+"PO-Revision-Date: 2010-08-20 19:47+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6508,9 +6508,12 @@ msgid "Warning"
 msgstr "Perspėjimas"
 
 #: setup/lib/messages.inc.php:16
+#, fuzzy
 msgid ""
 "If enabled user can enter any MySQL server in login form for cookie auth"
 msgstr ""
+"Jeigu įjungta naudotojas gali įvesti bet kokį MySQL serverį prisijungimo "
+"formoje slapukų identifikavime"
 
 #: setup/lib/messages.inc.php:17
 msgid ""
