--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:47+0200\n"
+"PO-Revision-Date: 2010-08-20 19:48+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6535,7 +6535,7 @@ msgstr "Rodyti „Pašalinti duombazę“ nuorodą paprastiems naudotojams"
 
 #: setup/lib/messages.inc.php:20
 msgid "Key should contain letters, numbers [em]and[/em] special characters"
-msgstr ""
+msgstr "Raktas turi turėti raidžių, skaičių [em]ir[/em] specialiųjų ženklų"
 
 #: setup/lib/messages.inc.php:21
 msgid ""
