Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:50+0200\n"
+"PO-Revision-Date: 2010-08-20 19:52+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6555,6 +6555,10 @@ msgid ""
 "so a key was automatically generated for you. It is used to encrypt cookies; "
 "you don't need to remember it."
 msgstr ""
+"Jūs neturite blowfish nustatytos paslapties ir turite įjungtą tapatumo "
+"nustatymą pagal slapukus (cookie), taigi raktas Jums buvo automatiškai "
+"sugeneruotas. Jis naudojamas užšifruoti slapukus; jums nereikia jo "
+"atsiminti."
 
 #: setup/lib/messages.inc.php:24
 msgid "Blowfish secret"
