Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:53+0200\n"
+"PO-Revision-Date: 2010-08-20 19:55+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6599,6 +6599,8 @@ msgid ""
 "decompression[/a] requires functions (%s) which are unavailable on this "
 "system."
 msgstr ""
+"[a@?page=form&amp;formset=features#tab_Import_export]Bzip2 glaudinimas ir "
+"išskleidimas[/a] reikalauja funkcijų (%s) kurios nėra galima Jūsų sistemoje."
 
 #: setup/lib/messages.inc.php:32
 msgid "Cannot load or save configuration"
