--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:55+0200\n"
+"PO-Revision-Date: 2010-08-20 19:56+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6621,10 +6621,9 @@ msgid ""
 msgstr ""
 
 #: setup/lib/messages.inc.php:35
-#, fuzzy
 #| msgid "CHAR fields editing"
 msgid "CHAR columns editing"
-msgstr "CHAR laukų redagavimas"
+msgstr "CHAR stulpelių redagavimas"
 
 #: setup/lib/messages.inc.php:36
 msgid "Number of columns for CHAR/VARCHAR textareas"
