Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 19:56+0200\n"
+"PO-Revision-Date: 2010-08-20 19:59+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6612,6 +6612,10 @@ msgid ""
 "level directory as described in [a@../Documentation.html#setup_script]"
 "documentation[/a]. Otherwise you will be only able to download or display it."
 msgstr ""
+"Prašome interneto serveryje phpMyAdmin pagrindiniame kataloge sukurti "
+"įrašomą [em]config[/em] katalogą kaip parašyta "
+"[a@../Documentation.html#setup_script]dokumentacijoje[/a]. Kitaip Jūs "
+"galėsite tik parsisiųsti ir peržiūrėti."
 
 #: setup/lib/messages.inc.php:34
 msgid ""
