Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 20:00+0200\n"
+"PO-Revision-Date: 2010-08-20 20:02+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6654,6 +6654,8 @@ msgid ""
 "Compress gzip/bzip2 exports on the fly without the need for much memory; if "
 "you encounter problems with created gzip/bzip2 files disable this feature"
 msgstr ""
+"Suspaudžiant gzip/bzip2 eksportuojant nereikia daug atminties; Jeigu Jūs "
+"patiriate problemų kuriant gzip/bzip2 failus tada išjunkite šią galimybę"
 
 #: setup/lib/messages.inc.php:43
 msgid "Compress on the fly"
