--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 20:06+0200\n"
+"PO-Revision-Date: 2010-08-20 20:07+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6686,9 +6686,8 @@ msgid "Tab that is displayed when entering a server"
 msgstr "Kortelė kuri yra rodoma kai įeinama į serverį"
 
 #: setup/lib/messages.inc.php:52
-#, fuzzy
 msgid "Default server tab"
-msgstr "Įprastinis serveris"
+msgstr "Įprastinė serverio kortelė"
 
 #: setup/lib/messages.inc.php:53
 msgid "Tab that is displayed when entering a table"
